--- a/SimplePasswordGenerator/app/src/main/res/values/strings.xml
+++ b/SimplePasswordGenerator/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">SimplePasswordGenerator</string>
+    <string name="app_name">SPG</string>
     <string name="botonGenerar">Generar</string>
     <string name="pantallaClaveDefault">********</string>
     <string name="pantallaLongitudDefault">8</string>
